--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/datn_ud15?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Kaizuto123456@
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=none
+#spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
