--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,16 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql.version}</version><!--$NO-MVN-MAN-VER$ -->
 		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+		<dependency>
+	        <groupId>org.apache.poi</groupId>
+	        <artifactId>poi-ooxml</artifactId>
+	        <version>4.1.2</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
