--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=123456
 #spring.datasource.url=jdbc:mysql://20.248.192.84:3306/datn_ud15?createDatabaseIfNotExist=true
 #spring.datasource.username=db
 #spring.datasource.password=Ab@123456
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.properties.hibernate.format_sql=true
