--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://localhost:3306/datn_ud15?createDatabaseIfNotExist=true
 #spring.datasource.username=root
 #spring.datasource.password=123456
-database server
+#database server
 spring.datasource.url=jdbc:mysql://20.248.192.84:3306/datn_ud15?createDatabaseIfNotExist=true
 spring.datasource.username=db
 spring.datasource.password=Ab@123456
