--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.password=Ab@123456
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.main.allow-bean-definition-overriding=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
 server.error.whitelabel.enabled = false
@@ -37,4 +38,5 @@ spring.mail.username=datn.ud15@gmail.com
 spring.mail.password=xepioqjkimkqzryt
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jackson.serialization.fail-on-empty-beans=false
 
